<resources>
    <string name="app_name">Easy Selling</string>

    <string name="create_or_edit">Create/Edit</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="skip">Skip</string>
    <string name="loading">loading</string>
    <string name="email">email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="pass">pass</string>
    <string name="welcome">Logged as </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="activity_title_change_pass">Change password</string>
    <string name="activity_title_search_company">Search company</string>
    <string name="activity_title_change_number">Change number</string>
    <string name="activity_title_request_to_add_company">Change number</string>
    <string name="activity_title_registration">User registration</string>
    <string name="activity_title_company_info">Company info</string>
    <string name="activity_title_change_user_data">Change user data</string>
    <string name="activity_title_sent_pass">Sent email</string>
    <string name="activity_title_products">Products</string>
    <string name="activity_title_create_order">Create order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- registration strings -->
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_sur_name">Surname</string>
    <string name="hint_mobile_number">Mobile number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="hint_new_password">A new password</string>

    <!-- registration errors -->
    <string name="err_msg_data">Field is empty</string>
    <string name="err_msg_email">Email is not valid</string>
    <string name="err_msg_check_email">Check your email</string>
    <string name="err_msg_empty_email">Email is empty</string>
    <string name="err_msg_password">Field is empty</string>
    <string name="err_msg_password_length">Password length must be min 6 character</string>
    <string name="err_msg_last_name">Last name is empty</string>
    <string name="err_msg_sur_name">Surname is empty</string>
    <string name="err_msg_mob_number">Mobile number is empty</string>
    <string name="err_msg_check_pass">Passwords are difference</string>

    <!-- navigation drawer strings -->
    <string name="myCatalog">Products catalog</string>
    <string name="myAccount">My account</string>
    <string name="myOrder">My orders</string>
    <string name="myMessages">Company chat</string>
    <string name="myWishList">Favorite</string>
    <string name="techSupport">Information</string>
    <string name="myNews">News</string>

    <!-- account fragment strings -->
    <string name="verify_label_status">Verify email status</string>

    <!-- company info strings -->
    <string name="activity_company_info_name">Company name : </string>
    <string name="activity_company_info_descr">About as : </string>
    <string name="activity_company_info_my_pos">My position : </string>
    <string name="activity_company_info_back_btn">Back</string>

    <!-- menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_change_password">Change password</string>
    <string name="action_delete_account">Delete account</string>
</resources>
