<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_catalog_items"
            android:icon="@drawable/delivery_symbol_of_a_list_on_clipboard_on_a_box_package"
            android:title="@string/myCatalog" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_padnote"
            android:title="@string/myOrder" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/myMessages"/>
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/myWishList"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/myNews"/>
        <item
            android:id="@+id/nav_tech_support"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/techSupport"/>
    </group>

</menu>
