<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/company_info_logo"
        android:layout_width="45dp"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/company_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_company_info_name"/>

    <TextView
        android:id="@+id/company_info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_company_info_descr"/>

    <TextView
        android:id="@+id/company_info_my_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_company_info_my_pos"
        />
    <TextView
        android:id="@+id/company_info_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/activity_company_info_back_btn" />



</LinearLayout>