<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp">



    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_last_name"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_sur_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_sur_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_sur_name"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_mob_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_mob_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mobile_number"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_rep_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/reg_rep_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:weightSum="1">

        <Button
            android:requestId="@+requestId/reg_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@drawable/colorbutton"
            android:text="Повернутись"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:requestId="@+requestId/reg_next_btn"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/colorbutton"
            android:text="Далі"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginLeft="3dp" />
    </LinearLayout>

</LinearLayout>