<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:requestId="@+requestId/activity_change_pass"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp">

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_acc_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/set_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_acc_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/set_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:requestId="@+requestId/layout_acc_rep_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:requestId="@+requestId/set_acc_rep_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:requestId="@+requestId/forgotPassLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:clickable="true"

        android:layout_below="@+requestId/buttonContainer">

        <ImageView
            android:requestId="@+requestId/forgotPassImage"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/lock_1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>

        <TextView
            android:requestId="@+requestId/forgotPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/forgot_your_password"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>