<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dove_of_peace"
        android:layout_alignParentRight="true"
        android:tint="@color/colorPrimary"
        android:layout_marginRight="16dp"/>

    <RelativeLayout
        android:id="@+id/loginContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/user_login_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="14dp"
            android:src="@drawable/users_1" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:layout_toRightOf="@+id/user_login_image"
            android:layout_alignLeft="@+id/loginContainer"
            android:singleLine="true"
            android:textSize="14sp"
            android:background="@drawable/oval"
            android:hint="@string/email"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/user_pass_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="14dp"
            android:layout_below="@+id/user_login_image"
            android:src="@drawable/locked" />

        <EditText
            android:id="@+id/passEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:singleLine="true"
            android:hint="@string/pass"
            android:padding="8dp"
            android:maxLines="1"
            android:lines="1"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/emailEdit"
            android:layout_toRightOf="@+id/user_login_image"
            android:layout_alignLeft="@+id/loginContainer" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginContainer"
        android:layout_alignLeft="@+id/loginContainer"
        android:layout_alignRight="@+id/loginContainer"
        android:layout_margin="6dp"
        android:weightSum="1">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@drawable/colorbutton"
            android:text="Sign in"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/registration_btn"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/colorbutton"
            android:text="Registration"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginLeft="3dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sent_pass_on_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_below="@+id/buttonContainer">

        <ImageView
            android:id="@+id/forgotPassImage"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/lock_1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>

        <TextView
            android:id="@+id/forgotPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"

            android:text="@string/forgot_your_password"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:text="Skip"

            android:textSize="14sp" />

        <ImageView
            android:id="@+id/skipImgBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:adjustViewBounds="true"
            android:src="@drawable/annon_login"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"/>
    </LinearLayout>

</RelativeLayout>
